# rust_on_stm

./: .gdbinit  Cargo.toml  memory.x  openocd.cfg
.cargo/: config.toml
src/: main.rs
