[package]
authors = ["longlom"]
edition = "2018"
readme = "README.md"
name = "diplom-stm32"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
stm32h7xx-hal = {version = "0.13.1", features = ["stm32h735","rt"]}


[[bin]]
name = "diplom-stm32"
test = false
bench = false


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
